# PRO-SUSE-97

./: README.md
modificacao/procmail-3.11pre7/: Makefile  initmake
modificacao/procmail-3.11pre7/src/: authenticate.c
modificacao/radius/src/: Makefile  radiusd.c  users.c
modificacao/radius/src/conf/: Linux_2.0
sistema_sources/procmail-3.11pre7/: Makefile.0  autoconf.h  config.h  patchlevel.h
sistema_sources/procmail-3.11pre7/SmartList/examples/: archive.txt  help.txt  subscribe.txt  unsubscribe.txt
sistema_sources/procmail-3.11pre7/man/: Makefile
sistema_sources/procmail-3.11pre7/src/: Makefile  acommon.c  acommon.h  authenticate.h  common.c  common.h  cstdio.c  cstdio.h  ecommon.c  ecommon.h  exopen.c  exopen.h  fields.c  fields.h  formail  formail.c  formail.h  formisc.c  formisc.h  gethome.c  goodies.c  goodies.h  header.h  hsort.c  hsort.h  includes.h  lastdirsep.c  lastdirsep.h  lockfile  lockfile.c  locking.c  locking.h  mailfold.c  mailfold.h  manconf.c  mcommon.c  mcommon.h  misc.c  misc.h  multigram.c  (+16 more)
sistema_sources/qpopper2.53/: INSTALL  License  Makefile  Makefile.in  acconfig.h  bulldir  config.cache  config.h  config.h.in  config.status  configure  configure.in  flock.c  flock.h  main.c  md5.c  md5.h  mkrd  mktemp.c  oraprocd.c  oraprocf.c  oraproch.h  pop_apop.c  pop_auth.c  pop_bull.c  pop_dele.c  pop_dropcopy.c  pop_get_command.c  pop_get_subcommand.c  pop_init.c  pop_last.c  pop_list.c  pop_log.c  pop_lower.c  pop_msg.c  pop_parse.c  pop_pass.c  pop_pass.c.new  pop_pass.c.old  pop_quit.c  (+19 more)
sistema_sources/qpopper2.53/doc/: FreeBSD.crypt  Release.Notes  lmos-faq.htm  lmos-faq.readme  lmos-faq.txt
sistema_sources/radius/raddb/: dictionary  users
sistema_sources/radius/src/: LICENSE  OCIDate  OCIDateToText  OCIDefine  README  acct.c  attrprint.c  builddbm.c  conf.h  dict.c  log.c  md5.c  md5.h  menu.c  oconf.c  ofunc.c  ohead.c  radius.h  securid.c  suffix  users.c.dialback  users.c.login  users.c.network  users.c.old  users.c.suffix  users.h  util.c  version.c
sistema_sources/radius/src/Linux_2.0/: builddbm  demo_rdbms.mk  env_rdbms.mk  mkrd  radiusd  tnsnames.ora
sistema_sources/radius/src/conf/: BSDOS_2.0  BSDOS_3.0  IRIX_5.2  IRIX_6.3  Linux_1.2  RS6000_4.1  alpha_T3.0  hp9000_10.01  sun4_4.1  sun4_5.5  sun86_5.5
